--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.11.1",
+    "lottie-react": "^2.4.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
