--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/cssinjs": "^1.17.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
+    "axios": "^1.6.1",
     "lottie-react": "^2.4.0",
     "next": "14.0.2",
     "react": "^18",
