--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.11.1",
     "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "next": "14.0.2",
